--- a/config/server_8081.conf
+++ b/config/server_8081.conf
@@ -1,5 +1,17 @@
 # config/server.conf
 server.port = 8081
-server.host = 0.0.0.0
+server.id = node2
+server.host = 127.0.0.1
 log.level = info
-log.file = ./logs/server_8081.log
+log.file = ./logs/server_2.log
+
+nodes.count = 2
+
+node1.id = node1
+node1.host = 127.0.0.1
+node1.port = 8080
+
+node2.id = node2
+node2.host = 127.0.0.1
+node2.port = 8081
+
